# korail-seat-notifier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  KORAIL_AGENT_PROMPT.md  PIPELINE.md  SKILLS.md  debug_api.py  debug_api2.py  debug_api3.py  debug_mobile_api.py  korail_gui.spec  pyproject.toml  run_gui.py
src/: gui.py  main.py
src/agent/: core.py  metrics.py  state.py
src/agents/: __init__.py  base.py  health_agent.py  input_agent.py  monitor_agent.py  notifier_agent.py  orchestrator.py
src/models/: config.py  events.py  query.py
src/skills/: base.py  notifier.py  parser.py  poller.py  seat_checker.py  station_data.py  validation.py
src/utils/: browser.py  logging_config.py  rate_limiter.py
tests/: conftest.py  test_agent_state.py  test_browser.py  test_notifier.py  test_query_validation.py  test_seat_checker.py
tests/integration/: test_monitor_flow.py  test_orchestrator.py
tests/unit/: test_health_agent.py  test_input_agent.py  test_monitor_agent.py  test_notifier_agent.py  test_orchestrator.py
